--- a/SleepTimer/Base.lproj/Main.storyboard
+++ b/SleepTimer/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,68 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SleepTimer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kAy-Nu-efa" userLabel="BottomView">
+                                <rect key="frame" x="0.0" y="333" width="375" height="333.5"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zt4-Eb-69b">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="333"/>
+                                        <color key="backgroundColor" red="1" green="0.4363684586991261" blue="0.53113618699244336" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <state key="normal" title="HOLD">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Zt4-Eb-69b" secondAttribute="bottom" constant="0.5" id="7LV-fH-Vs6"/>
+                                    <constraint firstAttribute="trailing" secondItem="Zt4-Eb-69b" secondAttribute="trailing" id="T9m-xe-A5I"/>
+                                    <constraint firstItem="Zt4-Eb-69b" firstAttribute="leading" secondItem="kAy-Nu-efa" secondAttribute="leading" id="qvO-nh-5lK"/>
+                                    <constraint firstItem="Zt4-Eb-69b" firstAttribute="top" secondItem="kAy-Nu-efa" secondAttribute="top" id="teR-Mb-kfi"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1xH-Oy-zTK" userLabel="TopView">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="333"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOp-7H-Hn8">
+                                        <rect key="frame" x="0.0" y="123" width="375" height="87"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="87" id="eTE-fo-6IG"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="50"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="vOp-7H-Hn8" firstAttribute="centerY" secondItem="1xH-Oy-zTK" secondAttribute="centerY" id="EoW-gw-GfB"/>
+                                    <constraint firstItem="vOp-7H-Hn8" firstAttribute="leading" secondItem="1xH-Oy-zTK" secondAttribute="leading" id="Fmh-0C-Uf9"/>
+                                    <constraint firstAttribute="trailing" secondItem="vOp-7H-Hn8" secondAttribute="trailing" id="IXv-55-eTL"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="kAy-Nu-efa" secondAttribute="bottom" constant="0.5" id="7aX-UC-uZe"/>
+                            <constraint firstItem="kAy-Nu-efa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="L7w-5E-udK"/>
+                            <constraint firstItem="1xH-Oy-zTK" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Nw4-rz-uji"/>
+                            <constraint firstItem="1xH-Oy-zTK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QBV-39-yh9"/>
+                            <constraint firstItem="1xH-Oy-zTK" firstAttribute="width" secondItem="kAy-Nu-efa" secondAttribute="width" id="SUG-Wt-oSD"/>
+                            <constraint firstItem="1xH-Oy-zTK" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="dHG-kR-QXt"/>
+                            <constraint firstItem="kAy-Nu-efa" firstAttribute="top" secondItem="1xH-Oy-zTK" secondAttribute="bottom" id="knq-Yr-cLq"/>
+                            <constraint firstItem="kAy-Nu-efa" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="vvC-u1-Eyq"/>
+                            <constraint firstItem="1xH-Oy-zTK" firstAttribute="height" secondItem="kAy-Nu-efa" secondAttribute="height" id="xaK-Ch-Xgh"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
