--- a/SleepTimer/Base.lproj/Main.storyboard
+++ b/SleepTimer/Base.lproj/Main.storyboard
@@ -49,11 +49,18 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="tc2-kG-LeD">
+                                        <rect key="frame" x="8" y="28" width="51" height="31"/>
+                                        <color key="onTintColor" red="1" green="0.6403341555662867" blue="0.44114980508644774" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="thumbTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </switch>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="tc2-kG-LeD" firstAttribute="leading" secondItem="1xH-Oy-zTK" secondAttribute="leading" constant="8" id="AYt-9o-s3U"/>
                                     <constraint firstItem="vOp-7H-Hn8" firstAttribute="centerY" secondItem="1xH-Oy-zTK" secondAttribute="centerY" id="EoW-gw-GfB"/>
                                     <constraint firstItem="vOp-7H-Hn8" firstAttribute="leading" secondItem="1xH-Oy-zTK" secondAttribute="leading" id="Fmh-0C-Uf9"/>
                                     <constraint firstAttribute="trailing" secondItem="vOp-7H-Hn8" secondAttribute="trailing" id="IXv-55-eTL"/>
+                                    <constraint firstItem="tc2-kG-LeD" firstAttribute="top" secondItem="1xH-Oy-zTK" secondAttribute="top" constant="28" id="egZ-Ee-pea"/>
                                 </constraints>
                             </view>
                         </subviews>
