--- a/SleepTimer/Base.lproj/Main.storyboard
+++ b/SleepTimer/Base.lproj/Main.storyboard
@@ -55,10 +55,10 @@
                                         <color key="thumbTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </switch>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IiZ-vZ-QG9">
-                                        <rect key="frame" x="331" y="28" width="36" height="30"/>
+                                        <rect key="frame" x="323" y="29" width="36" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="Jej-Rj-ga9"/>
-                                            <constraint firstAttribute="width" constant="36" id="qT1-Wu-pcu"/>
+                                            <constraint firstAttribute="height" constant="30" id="FUs-Pt-Sa9"/>
+                                            <constraint firstAttribute="width" constant="36" id="xTo-q5-sNq"/>
                                         </constraints>
                                         <state key="normal" title="More">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -69,12 +69,12 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="IiZ-vZ-QG9" firstAttribute="top" secondItem="1xH-Oy-zTK" secondAttribute="top" constant="28" id="9xp-20-UPD"/>
+                                    <constraint firstItem="IiZ-vZ-QG9" firstAttribute="top" secondItem="1xH-Oy-zTK" secondAttribute="top" constant="29" id="17s-xa-wpp"/>
                                     <constraint firstItem="tc2-kG-LeD" firstAttribute="leading" secondItem="1xH-Oy-zTK" secondAttribute="leading" constant="8" id="AYt-9o-s3U"/>
                                     <constraint firstItem="vOp-7H-Hn8" firstAttribute="centerY" secondItem="1xH-Oy-zTK" secondAttribute="centerY" id="EoW-gw-GfB"/>
                                     <constraint firstItem="vOp-7H-Hn8" firstAttribute="leading" secondItem="1xH-Oy-zTK" secondAttribute="leading" id="Fmh-0C-Uf9"/>
+                                    <constraint firstAttribute="trailing" secondItem="IiZ-vZ-QG9" secondAttribute="trailing" constant="16" id="GbB-Jc-duZ"/>
                                     <constraint firstAttribute="trailing" secondItem="vOp-7H-Hn8" secondAttribute="trailing" id="IXv-55-eTL"/>
-                                    <constraint firstAttribute="trailing" secondItem="IiZ-vZ-QG9" secondAttribute="trailing" constant="8" id="YND-yt-6Ce"/>
                                     <constraint firstItem="tc2-kG-LeD" firstAttribute="top" secondItem="1xH-Oy-zTK" secondAttribute="top" constant="28" id="egZ-Ee-pea"/>
                                 </constraints>
                             </view>
@@ -101,12 +101,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
+            <point key="canvasLocation" x="294" y="134"/>
         </scene>
-        <!--View Controller-->
+        <!--Settings View Controller-->
         <scene sceneID="wcS-1Z-wVc">
             <objects>
-                <viewController id="I4o-9J-FEK" sceneMemberID="viewController">
+                <viewController id="I4o-9J-FEK" customClass="SettingsViewController" customModule="SleepTimer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="svV-pk-REF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -128,23 +128,35 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jrc-Mq-ucz">
-                                <rect key="frame" x="16" y="20" width="46" height="30"/>
+                                <rect key="frame" x="16" y="28" width="46" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="7j6-x4-Dzn"/>
                                     <constraint firstAttribute="width" constant="46" id="Nx9-s4-eiN"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="presentation" id="fVa-Pv-abz"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aTF-nD-5xn" userLabel="ClockView" customClass="AnalogClockView" customModule="AnalogClock">
+                                <rect key="frame" x="99" y="28" width="177" height="177"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="177" id="2vL-oy-I1J"/>
+                                    <constraint firstAttribute="height" constant="177" id="5kd-i5-gOA"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="7xO-qb-Qqu" firstAttribute="leading" secondItem="lVy-c8-v0Q" secondAttribute="leading" id="BLw-oM-L96"/>
+                            <constraint firstItem="7xO-qb-Qqu" firstAttribute="top" secondItem="aTF-nD-5xn" secondAttribute="bottom" constant="2" id="EYg-wL-1zO"/>
+                            <constraint firstItem="aTF-nD-5xn" firstAttribute="centerX" secondItem="svV-pk-REF" secondAttribute="centerX" id="EoG-Vs-Sh9"/>
                             <constraint firstItem="jrc-Mq-ucz" firstAttribute="leading" secondItem="lVy-c8-v0Q" secondAttribute="leading" constant="16" id="R1n-Fc-0Pl"/>
                             <constraint firstItem="7xO-qb-Qqu" firstAttribute="bottom" secondItem="lVy-c8-v0Q" secondAttribute="bottom" id="Ss0-w4-5UZ"/>
-                            <constraint firstItem="jrc-Mq-ucz" firstAttribute="top" secondItem="lVy-c8-v0Q" secondAttribute="top" id="UtG-r5-hTf"/>
+                            <constraint firstItem="jrc-Mq-ucz" firstAttribute="top" secondItem="lVy-c8-v0Q" secondAttribute="top" constant="8" id="UtG-r5-hTf"/>
                             <constraint firstItem="7xO-qb-Qqu" firstAttribute="top" secondItem="lVy-c8-v0Q" secondAttribute="top" constant="187" id="fzb-fM-ru4"/>
                             <constraint firstItem="7xO-qb-Qqu" firstAttribute="trailing" secondItem="lVy-c8-v0Q" secondAttribute="trailing" id="qDI-tc-RrV"/>
                         </constraints>
@@ -153,7 +165,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mup-D3-YNr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="892" y="130.88455772113943"/>
+            <point key="canvasLocation" x="901.60000000000002" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
