--- a/SleepTimer/Base.lproj/Main.storyboard
+++ b/SleepTimer/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -40,7 +41,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1xH-Oy-zTK" userLabel="TopView">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="333"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOp-7H-Hn8">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOp-7H-Hn8">
                                         <rect key="frame" x="0.0" y="123" width="375" height="87"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="87" id="eTE-fo-6IG"/>
@@ -95,6 +96,7 @@
                     </view>
                     <connections>
                         <outlet property="nightSwitch" destination="tc2-kG-LeD" id="Oxj-cg-eXh"/>
+                        <outlet property="settingsBtn" destination="IiZ-vZ-QG9" id="0YG-0C-TmU"/>
                         <outlet property="sleepBtn" destination="Zt4-Eb-69b" id="gFc-jb-9la"/>
                         <outlet property="stopwatchLabel" destination="vOp-7H-Hn8" id="eNn-Gj-YxP"/>
                     </connections>
@@ -125,17 +127,21 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="aPQ-uI-4yG" secondAttribute="bottom" id="IaI-hF-hI2"/>
-                                    <constraint firstItem="aPQ-uI-4yG" firstAttribute="top" secondItem="7xO-qb-Qqu" secondAttribute="top" id="ZV3-XQ-OdT"/>
-                                    <constraint firstAttribute="trailing" secondItem="aPQ-uI-4yG" secondAttribute="trailing" id="meg-qm-2Nj"/>
-                                    <constraint firstItem="aPQ-uI-4yG" firstAttribute="leading" secondItem="7xO-qb-Qqu" secondAttribute="leading" id="nxh-ne-Teo"/>
+                                    <constraint firstItem="aPQ-uI-4yG" firstAttribute="leading" secondItem="7xO-qb-Qqu" secondAttribute="leading" id="54M-5K-2T6"/>
+                                    <constraint firstAttribute="trailing" secondItem="aPQ-uI-4yG" secondAttribute="trailing" id="8Be-ty-Lmd"/>
+                                    <constraint firstItem="aPQ-uI-4yG" firstAttribute="top" secondItem="7xO-qb-Qqu" secondAttribute="top" id="EeI-Zb-K5l"/>
+                                    <constraint firstAttribute="bottom" secondItem="aPQ-uI-4yG" secondAttribute="bottom" id="Rxl-Od-yNW"/>
+                                    <constraint firstAttribute="bottom" secondItem="aPQ-uI-4yG" secondAttribute="bottom" id="amG-rn-9uz"/>
+                                    <constraint firstAttribute="trailing" secondItem="aPQ-uI-4yG" secondAttribute="trailing" id="efA-kw-2l6"/>
+                                    <constraint firstItem="aPQ-uI-4yG" firstAttribute="top" secondItem="7xO-qb-Qqu" secondAttribute="top" id="r3G-Gi-9d8"/>
+                                    <constraint firstItem="aPQ-uI-4yG" firstAttribute="leading" secondItem="7xO-qb-Qqu" secondAttribute="leading" id="tEJ-sK-gey"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jrc-Mq-ucz">
                                 <rect key="frame" x="16" y="28" width="46" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="7j6-x4-Dzn"/>
-                                    <constraint firstAttribute="width" constant="46" id="Nx9-s4-eiN"/>
+                                    <constraint firstAttribute="height" constant="30" id="HLG-It-ZEj"/>
+                                    <constraint firstAttribute="width" constant="46" id="Xc7-Kg-JrO"/>
                                 </constraints>
                                 <state key="normal" title="Back">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -144,36 +150,24 @@
                                     <segue destination="ID5-Nk-KjI" kind="unwind" unwindAction="backToTimerViewController:" id="kgD-hH-btm"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="24W-cI-wxu">
-                                <rect key="frame" x="0.0" y="112" width="375" height="87"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="375" id="8Co-k7-Lfx"/>
-                                    <constraint firstAttribute="height" constant="87" id="W8t-ve-UKd"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="50"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="24W-cI-wxu" firstAttribute="centerX" secondItem="svV-pk-REF" secondAttribute="centerX" id="1r7-bo-rLx"/>
-                            <constraint firstItem="7xO-qb-Qqu" firstAttribute="leading" secondItem="lVy-c8-v0Q" secondAttribute="leading" id="BLw-oM-L96"/>
-                            <constraint firstItem="24W-cI-wxu" firstAttribute="trailing" secondItem="lVy-c8-v0Q" secondAttribute="trailing" id="JRs-o1-fc4"/>
-                            <constraint firstItem="jrc-Mq-ucz" firstAttribute="leading" secondItem="lVy-c8-v0Q" secondAttribute="leading" constant="16" id="R1n-Fc-0Pl"/>
-                            <constraint firstItem="7xO-qb-Qqu" firstAttribute="bottom" secondItem="lVy-c8-v0Q" secondAttribute="bottom" id="Ss0-w4-5UZ"/>
-                            <constraint firstItem="24W-cI-wxu" firstAttribute="leading" secondItem="lVy-c8-v0Q" secondAttribute="leading" id="TMo-bg-D59"/>
-                            <constraint firstItem="jrc-Mq-ucz" firstAttribute="top" secondItem="lVy-c8-v0Q" secondAttribute="top" constant="8" id="UtG-r5-hTf"/>
-                            <constraint firstItem="7xO-qb-Qqu" firstAttribute="top" secondItem="lVy-c8-v0Q" secondAttribute="top" constant="187" id="fzb-fM-ru4"/>
-                            <constraint firstItem="7xO-qb-Qqu" firstAttribute="trailing" secondItem="lVy-c8-v0Q" secondAttribute="trailing" id="qDI-tc-RrV"/>
-                            <constraint firstItem="7xO-qb-Qqu" firstAttribute="top" secondItem="24W-cI-wxu" secondAttribute="bottom" constant="8" id="yLF-9e-9St"/>
+                            <constraint firstItem="jrc-Mq-ucz" firstAttribute="leading" secondItem="svV-pk-REF" secondAttribute="leadingMargin" id="Ahx-6z-hjg"/>
+                            <constraint firstItem="7xO-qb-Qqu" firstAttribute="bottom" secondItem="lVy-c8-v0Q" secondAttribute="bottom" id="F4g-nM-Q3q"/>
+                            <constraint firstAttribute="trailing" secondItem="7xO-qb-Qqu" secondAttribute="trailing" id="Q6r-2i-xfN"/>
+                            <constraint firstItem="7xO-qb-Qqu" firstAttribute="leading" secondItem="svV-pk-REF" secondAttribute="leading" id="YXB-bg-0WF"/>
+                            <constraint firstItem="jrc-Mq-ucz" firstAttribute="top" secondItem="lVy-c8-v0Q" secondAttribute="top" constant="8" id="aCu-EJ-fTA"/>
+                            <constraint firstItem="7xO-qb-Qqu" firstAttribute="top" secondItem="svV-pk-REF" secondAttribute="top" constant="207" id="ndy-4I-e7G"/>
+                            <constraint firstItem="jrc-Mq-ucz" firstAttribute="leading" secondItem="lVy-c8-v0Q" secondAttribute="leading" constant="16" id="tV2-aX-PhJ"/>
+                            <constraint firstItem="lVy-c8-v0Q" firstAttribute="trailing" secondItem="jrc-Mq-ucz" secondAttribute="trailing" constant="313" id="yyn-xn-u9k"/>
+                            <constraint firstItem="jrc-Mq-ucz" firstAttribute="top" secondItem="lVy-c8-v0Q" secondAttribute="top" constant="8" id="zrG-tN-UA7"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="lVy-c8-v0Q"/>
                     </view>
                     <connections>
                         <outlet property="backButton" destination="jrc-Mq-ucz" id="F3g-Mg-mBf"/>
                         <outlet property="dataLogTableView" destination="aPQ-uI-4yG" id="cbk-lu-Gze"/>
-                        <outlet property="timeStampLabel" destination="24W-cI-wxu" id="Rc2-G6-e7G"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mup-D3-YNr" userLabel="First Responder" sceneMemberID="firstResponder"/>
